--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/envanter_directory
-spring.datasource.username=root
-spring.datasource.password=secret
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:envanterdb
+spring.h2.console.enabled=true
 spring.jpa.show-sql: true
 
+spring.sql.init.data-locations=classpath:insert.sql,classpath:insert2.sql 
+spring.jpa.defer-datasource-initialization=true
 
 #cloud 
 spring.application.name=data-rest-service
