micro servis için ilk commitler
micro servis için ilk commitler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.sql.init.data-locations=classpath:insert.sql,classpath:insert2.sql
 spring.jpa.defer-datasource-initialization=true
 
 #cloud 
-spring.application.name=data-rest-service
+spring.application.name=spring-boot-env-microservis-2-service-dao
 spring.config.import=optional:configserver:http://localhost:8080
 server.port=8888
 
 #aplication property hangisi kullanilacak application-dev.properties
 sping.profiles.active=dev
-spring.cloud.config.profile=dev
+#spring.cloud.config.profile=dev
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
