--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 		    <version>4.0.2</version>
 		</dependency>
 
+		<!--Proxy için @EnableFeignClients-->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-openfeign</artifactId>
+		    <version>4.0.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
