for naming services
for naming services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.config.import=optional:configserver:http://localhost:8080
 server.port=8888
 
 #aplication property hangisi kullanilacak application-dev.properties
-sping.profiles.active=dev
+#sping.profiles.active=dev
 #spring.cloud.config.profile=dev
 
 spring.mail.host=smtp.gmail.com
@@ -22,3 +22,5 @@ spring.mail.username=...@gmail.com
 spring.mail.password=...
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
